#2 Validations and layout changes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -203,6 +203,13 @@ en:
   activerecord:
     errors:
       <<: *errors
+      models:
+        message:
+          attributes:
+            text:
+              blank: "Don't you wanna say something after your death? Come on... don't be shy"
+            days_to_send:
+              blank: "When should I deliver it?"
     attributes:
       message:
         text: "Message"
